--- a/index.css
+++ b/index.css
@@ -11,9 +11,8 @@ html {
 
 /* Basic styling for the layout */
 body {
+    background-color: #282828;
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-size: 1.5rem;
     min-height: 100%;
@@ -30,20 +29,27 @@ header {
     overflow: hidden; /* Ensures the animation stays within the bounds of the header */
 }
 
+.title{
+    font-size: 6rem;
+    margin-bottom: 7rem;
+    margin-top: 5rem;
+}
+
 h1{
     font-size: 6rem;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
+    margin-top: 2rem;
 }
 
 h2{
     color: #000;
-    font-size: 5rem;
+    font-size: 4.5rem;
     margin-bottom: 4rem;
 }
 
 h3{
     text-decoration: underline;
-    font-size: 4rem;
+    font-size: 3rem;
     margin-bottom: 2rem;
     color: azure;
     padding-left: 2rem;
@@ -63,7 +69,7 @@ nav ul li {
 nav ul li a {
     background-color: rgb(61, 61, 61); /* Stone color */
     color: white;
-    margin: 1.5rem 0rem 0.75rem 0rem;
+    margin: 2rem 0rem 0.75rem 0rem;
     padding: 1rem 2rem;
     text-decoration: none;
     font-weight: bold;
@@ -84,17 +90,13 @@ nav ul li a:hover {
 main {
     flex: 1;
     background-color: #282828;
-    padding: 2rem 12rem;
+    padding: 4% 8%;
     
 }
 
-#About{
-    height: 30rem;
-}
-
 .images {
-    height: auto; /* 100px */
-    width: 27%;
+    height: auto; 
+    width: 30%;
     float: left; /* Float the image to the left */
     margin-right: 1rem;
     padding-left: 2rem;
@@ -106,7 +108,12 @@ main {
 
 #quotes {
     text-align: center; /* Centers the text inside the blockquote */
-    font-size: 2rem;
+    font-size: 2.5rem;
+    text-shadow: 
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+        -1px  1px 0 #000,
+         1px  1px 0 #000;
 }
 
 #quotes h2 {
@@ -117,10 +124,13 @@ blockquote {
     margin: 1rem auto; /* Centers the blockquote horizontally in the #quotes section */
     width: 50%; /* Optional: you might want to limit the width of blockquotes */
 }
-
+#About{
+    padding-top: 0.9rem;
+    padding-bottom: 3rem;
+}
 #Books{
     height: 100rem;
-    padding: 10rem 0rem;
+    padding: 3rem 0rem;
 }
 footer {
     background-color: #222;
@@ -190,6 +200,7 @@ footer a {
         display: block; /* Display long text on larger screens */
         font-size: 2rem;
         margin-bottom: 7rem;
+        padding-left: 2rem;
     }
 }
 
@@ -198,12 +209,35 @@ footer a {
     .short-text {
         display: block; /* Display short text on smaller screens */
         margin-bottom: 3rem;
+    
     }
 }
+
+/* Smaller devices (phones, tablets, smaller desktops) */
+@media (max-width: 768px) {
+    .buy {
+        font-size: 2rem; /* Smaller font size for smaller screens */
+        padding: 1rem; /* Fixed padding */
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+    .images {
+        width: 100%; /* Full width on smaller screens */
+        padding-left: 0;
+        padding-bottom: 2rem;
+    }
+    h3{
+        padding-left: 0;
+    }
+}
+
+
+
 h2 span{
     background-color: azure;
     padding: 1rem;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
     text-decoration: none;
     padding: 1rem;
 }
@@ -216,55 +250,22 @@ a{
     display: inline-block;
     background-color: azure;
     color: #000;
-    padding: 1.5rem;
+    padding: 1rem;
     border-radius: 0.5rem;
-    font-size: 2rem;
+    font-size: 3rem;
+    margin-left: 2rem;
+    border: solid black 0.2rem;
+    font-weight: bold;
+}
+
+.buy-container{
+    text-align: center;
+    margin-right: 2rem;
+    padding-bottom: 3rem;
+    margin-bottom: 2rem;
 }
 
 
-.card-container, .back, .front {
-    width: 300px;
-    height: 500px;
-  }
-  
-  .card-container {
-    margin: 80px auto 0 auto;
-  }
-  
-  
-  /* Core */
-  
-  .card-container {
-    perspective: 600px; /* 2x .card-container width */
-  }
-  
-  .card {
-    transition: transform .5s;
-    transform-style: preserve-3d;
-    position: relative;
-    border: 2px solid red;
-    height: 10rem;
-  }
-  
-  .front, .back {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  
-  .front {
-    background-image: url("./Images/Alienated.jpg");
-    z-index: 1;
-  }
-  
-  .back {
-    background-image: url("./Images/AlienatedBack.jpg");
-    transform: rotateY(180deg);
-  }
-  
-  .card-container:hover .card {
-    transform: rotateY(180deg);
-  }
   .social-link{
     font-size: 4rem;
     align-items: center;
