--- a/index.css
+++ b/index.css
@@ -90,8 +90,8 @@ nav ul li a:hover {
 main {
     flex: 1;
     background-color: #282828;
-    padding: 4% 8%;
-    
+    padding: 3% 8% 1% 8%;
+
 }
 
 .images {
@@ -134,15 +134,15 @@ blockquote {
 }
 
 #Books{
-    height: 100rem;
+    height: 90rem;
 }
 footer {
     background-color: #222;
     color: white;
     text-align: center;/* 10px 20px */
     font-size: 2.5rem;
-    padding-top: 4rem;
-    padding-bottom: 10rem;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
 }
 
 footer a {
@@ -268,7 +268,7 @@ a{
     text-align: center;
     justify-content: center;
     margin-right: 2rem;
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
     margin-bottom: 2rem;
 }
 
